--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
               applications. My mission? Crafting fast, user-friendly experiences
               that make people’s lives easier and sprinkle a little magic onto
               the world.
+              <p>
+                test 
+              </p>
             </p>
           </div>
         </div>
