--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ginger Couillard</title>
     <link rel="stylesheet" href="styles.css" />
-    <script src="https://kit.fontawesome.com/e702cd7e78.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/e702cd7e78.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
+
   <body>
     <section id="about-me">
       <nav>
@@ -37,19 +41,43 @@
         <div class="about-me__info row">
           <div class="about-me__info--container">
             <figure class="about-me__picture--mask">
-              <img src="assets/Ginger.JPG" class="about-me__picture" alt="Picture of Me!" />
+              <img
+                src="assets/Ginger.JPG"
+                class="about-me__picture"
+                alt="Picture of Me!"
+              />
             </figure>
             <h1 class="about-me__info--title">
               Hey! I'm <span class="text--purple">Ginger Couillard</span>👋
             </h1>
             <p class="about-me__info--para">
-              I'm a <strong class="text--purple">frontend software engineering wizard</strong> who
-              transforms lines of code into dazzling, responsive web
+              I'm a
+              <strong class="text--purple"
+                >frontend software engineering wizard</strong
+              >
+              who transforms lines of code into dazzling, responsive web
               applications. My mission? Crafting fast, user-friendly experiences
               that make people’s lives easier and sprinkle a little magic onto
               the world.
             </p>
+            <div class="about-me__links">
+              <a href="" class="about-me__link">
+                <i class="fa-brands fa-linkedin-in"></i>
+              </a>
+              <a href="" class="about-me__link">
+                <i class="fa-brands fa-square-github"></i>
+              </a>
+              <a href="" class="about-me__link">
+                <i class="fa-solid fa-square-envelope"></i>
+              </a>
+              <a href="" class="about-me__link">
+                <i class="fa-solid fa-file-pdf"></i>
+              </a>
+            </div>
           </div>
+          <figure class="about-me__img--container">
+            <img src="assets/undraw_websites.svg" alt="" />
+          </figure>
         </div>
       </div>
     </section>
