--- a/index.html
+++ b/index.html
@@ -16,21 +16,27 @@
       <nav>
         <div class="personal__logo">Ginger Couillard</div>
         <ul class="nav__link--list">
-          <li>
-            <a
-              href=""
-              class="nav__link--anchor link__hover-effect link__hover-effect--black"
-              >Languages</a
-            >
+          <li class="nav__link">
+            <a href="#languages" class="
+              nav__link--anchor
+              link__hover-effect
+              link__hover-effect--black
+            ">Languages</a>
           </li>
-          <li>
-            <a
-              href=""
-              class="nav__link--anchor link__hover-effect link__hover-effect--black"
-              >Project</a
-            >
+          <li class="nav__link">
+            <a href="#projects" class="
+              nav__link--anchor
+              link__hover-effect
+              link__hover-effect--black
+            ">Projects</a>
           </li>
-          <li>
+          <li class="nav__link">
+            <a href="mailto:email@email.com" class="
+              nav__link--anchor
+              nav__link--anchor-primary
+            ">Contact</a>
+          </li>
+          <li class="nav__link">
             <a href="" class="nav__link--anchor nav__link--anchor-primary"
               >Contact</a
             >
@@ -48,7 +54,7 @@
               />
             </figure>
             <h1 class="about-me__info--title">
-              Hey! I'm <span class="text--purple">Ginger Couillard</span>👋
+              Hey! I'm <span class="text--purple">Ginger Couillard</span></span>&nbsp;<span class="wave">👋</span>
             </h1>
             <p class="about-me__info--para">
               I'm a
@@ -69,7 +75,7 @@
               <a href="" class="about-me__link">
                 <i class="fa-solid fa-square-envelope"></i>
               </a>
-              <a href="" class="about-me__link">
+              <a href="./assets/Example Resume.pdf" target="_blank" class="about-me__link">
                 <i class="fa-solid fa-file-pdf"></i>
               </a>
             </div>
@@ -102,48 +108,48 @@
                   <img src="https://cdn.iconscout.com/icon/free/png-256/css-131-722685.png" alt="CSS Logo"
                     class="language__img" />
                 </figure>
-                <span class="language__name">HTML</span>
+                <span class="language__name">CSS</span>
               </div>
               <div class="language">
                 <figure class="language__img--wrapper">
                   <img src="https://cdn.iconscout.com/icon/free/png-256/javascript-1-225993.png" alt="JavaScript Logo"
                     class="language__img" />
                 </figure>
-                <span class="language__name">HTML</span>
+                <span class="language__name">JavaScript</span>
               </div>
               <div class="language">
                 <figure class="language__img--wrapper">
                   <img src="https://cdn.iconscout.com/icon/free/png-256/typescript-3521774-2945272.png"
                     alt="TypeScript Logo" class="language__img" />
                 </figure>
-                <span class="language__name">HTML</span>
+                <span class="language__name">TypeScript</span>
               </div>
               <div class="language">
                 <figure class="language__img--wrapper">
                   <img src="https://cdn.iconscout.com/icon/free/png-256/vue-282497.png" alt="Vue Logo"
                     class="language__img" />
                 </figure>
-                <span class="language__name">HTML</span>
+                <span class="language__name">Vue</span>
               </div>
               <div class="language">
                 <figure class="language__img--wrapper">
                   <img src="https://cdn.iconscout.com/icon/free/png-256/nuxt-dot-js-3628959-3030184.png" alt="Nuxt Logo"
                     class="language__img" />
                 </figure>
-                <span class="language__name">HTML</span>
+                <span class="language__name">Nuxt</span>
               </div>
               <div class="language">
                 <figure class="language__img--wrapper">
                   <img src="https://cdn.iconscout.com/icon/free/png-256/react-3-1175109.png" alt="React Logo"
                     class="language__img" />
                 </figure>
-                <span class="language__name">HTML</span>
+                <span class="language__name">React</span>
               </div>
               <div class="language">
                 <figure class="language__img--wrapper">
                   <img src="https://mobx.js.org/img/mobx.png" alt="MobX Logo" class="language__img" />
                 </figure>
-                <span class="language__name">HTML</span>
+                <span class="language__name">MobX</span>
               </div>
             </div>
           </div>
